<resources>
    <string name="war_hint">Use this screen to build a war hit list! Search and select your enemy squad, and enter details about start and outposts.</string>
    <string name="facebook_app_id">949743418545844</string>
    <string name="fb_login_protocol_scheme">fb949743418545844</string>
    <string name="app_name">SWC Tools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="war_outpost_options">
        <item>Outpost</item>
        <item>No Outpost</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="saveButton">Save</string>
    <string name="clearButton">Clear</string>
    <string name="playerIdLabel">Player Id</string>
    <string name="playerSecretLabel">Player Secret</string>
    <string name="addPlayerInstructions">Fill in your player Id and secret below</string>
    <string name="selectFileTxt">Select File</string>
    <string name="importFrom">Import Player Details From Sigma\'s Layout Manager App</string>
    <string name="importSigma">Import Sigma\'s LM Config</string>
    <string name="share">Share</string>
    <string name="add_player">Add Player</string>
    <string name="settings">Settings</string>
    <string name="players">Players</string>
    <string name="support">Support</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pulldownrefresh">Pull down to refresh</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="nav_header_title">SWC ANDROID TOOLS</string>
    <string name="nav_header_subtitle"> (TheMob) | Line: ddavecmo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="migrate_images_intro">To improve performance, layout images will be migrated from the internal application database to your device storage. Click on the button below to begin.
</string>
    <string-array name="factions">
        <item>- Select Faction - </item>
        <item>Rebel</item>
        <item>Empire</item>
    </string-array>
    <string-array name="layout_favourite_types">
        <item>All Favourites</item>
        <item>Player Favourites</item>
        <item>Last Used</item>
        <item>Most Used</item>
    </string-array>
    <string name="save_layout_intro">
        Give your layout a name (any name!) to save it. Use the other options to help organise your layouts if you have many or you just like to organise your stuff.
    </string>
    <string name="none_prompt">None</string>
    <string name="drawer_import">Import Layout</string>
    <string name="drawer_layout_manager">Layout Manager</string>
    <string name="drawer_warlist">War Sign Up</string>
    <string name="drawer_about">About</string>
    <string name="drawer_say_thanks"></string>
    <string name="drawer_settings">Settings</string>
    <string name="thanks_text">
        <![CDATA[<p>This app is provided free to use for imperial villains and rebel scum alike :)  It has been a fun journey for me, learning a lot about Android App Development, and I genuinely hope you enjoy the results.</p>
        <p>Building this app has always been about continuing Sigma’s work for the community, hopefully reaching more players with it and an opportunity to build an Android App that had some chance of a user base that could provide me with useful feedback. So, thank you to all that have reported bugs and issues, and made suggestions! Please continue to do so.</p>
<p>If you would like to say thanks, you can drop me message on LINE. If you would like to donate something, please offer to support the hosting costs for KSOD/GSOW.</p>]]></string>
    <string name="about_1">First of all I have to thank and recognise Sigma582 - the player that created the original Layout Manager and Defence tracker tools. Without his work, I wouldn’t have been inspired to create this app. He and others did a lot to demystify how to communicate with Disney\'s server and although he is no longer in the game, I felt it right to thank him here.</string>
    <string name="fund_me_link">https://www.gofundme.com/buy-sf-a-beer</string>
    <string name="about_2">In future releases I will be introducing automatic defence log notifications, and the ability to set your armoury items.</string>
    <string-array name="long_date_formats">
        <item>dd-MMM-yyyy HH:mm:ss</item>
        <item>MMM-dd-yyyy HH:mm:ss</item>
        <item>yyyy-MMM-dd HH:mm:ss</item>
    </string-array>
    <string-array name="short_date_formats">
        <item>dd-MMM-yyyy</item>
        <item>MMM-dd-yyyy</item>
        <item>yyyy-MMM-dd</item>
    </string-array>
    <string-array name="yesno">
        <item>Any</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="settings_date_hint">Change the format of the dates shown on the defence log and on layout manager cards.</string>
    <string name="settings_notifications_hint">Defence Tracker will periodically fetch your latest player data to display a notification detailing the status of your squad center, your protection status and a list of the most recent battles.</string>
    <string name="settings_danger_zone">Only change these settings if you know what you are doing!</string>
    <string name="settings_server_hint">The address the app uses to send the requests to. Only change this if you know this has been changed by Disney.</string>
    <string name="settings_timeout_hint">Set the length of time between requests before the bot re authenticates with the server. Reduce the time if you are finding data refreshes don’t reflect your actual player data.</string>
    <string name="manage_type_tag_hint_text">Add, edit or delete your layout types and tags using the controls below. Swipe left or right to switch views between types and tags.</string>
    <string name="settings_bot_hint">Some data is fetched by using a ‘Bot’ account. Set the bot account details here. (WARNING setting this incorrectly will definitely break the app!).</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="player_favourite_layout_hint">Use this tab to view your favourite, most used or last used layouts and quickly apply them to this player from here. </string>
    <string name="player_last_layout_hint">Quickly apply one of your LAST used layouts for this player below (sorted in order of most to least used): </string>
    <string name="getting_started_title">Welcome to the SWC Tools for Android app!</string>
    <string name="getting_started_intro">This app, inspired by the great Sigma582 who created the original Windows versions of Layout Manager and Defence Tracker, allows you to save and quickly swap between layouts on your war and pvp base, as well as keep tabs on your defence status.</string>
    <string name="getting_started_quickstart_title">Getting Started</string>
    <string name="getting_started_youtube">Need a little help getting started? Check out this awesome video from the legend that is Agent Simr which takes you through all you need to get up and running. Huge thanks to him and all that helped him.</string>
    <string name="getting_started_quickstart_1">Click on the plus icon in the bottom right to add a player (app supports unlimited number of players - looking at you, Dennis)</string>
    <string name="c">a192</string>
    <string name="getting_started_quickstart_2">Added players will appear as cards on this screen. Tap on them to view your player status and defence log. Quick saving of layouts is now supported via a menu on the each player card.</string>
    <string name="getting_started_quickstart_3">The main menu is accessible by swiping out from the left from this screen. There you\'ll find tools to import layout files, settings, defence tracker and help/FAQ</string>
    <string name="getting_started_tellmemore_title">Tell me more!</string>
    <string name="getting_started_tellmemore_1">This app needs your Player ID and Player Secret to work, and if you have not previously used the Windows version of Layout Manager you will need to go through a few steps to get this information.</string>
    <string name="getting_started_tellmemore_2">Thankfully, the SWC community is full of awesome people like Agent Simr who produced a YouTube video taking you through how to get your secret, how to use Sigma\'s original tools for Windows PCs, and some of the main features of this app.</string>
    <string name="getting_started_tellmemore_link">LINK!</string>
    <string name="getting_started_tellmemore_3">Head on over to YouTube, watch the video, and give him a thumbs up and a subscribe whilst you\'re there. His videos are legendary amongst the Line Community and it\'s awesome he\'s made one to help people get up and running with all these tools to make our SWC lives a little more bearable. And if you see him about in chats, don\'t forget to thank him!</string>
    <string name="getting_started_signoff">Lastly, I hope you enjoy using this app and imperial or rebel, MTFBWY!</string>
    <string name="drawer_logs">Logs</string>
</resources>